some usability updates to the UI

--- a/index.html
+++ b/index.html
@@ -40,7 +40,12 @@
 			<div class="small-12 columns">
 				<p>You should name your color scheme...</p>
 				<p id="name"></p>
-				<button class="button round" id="new"">Try again</button>
+			</div>
+			<div class="small-6 columns">
+				<button class="button round" id="again"">Try again</button>
+			</div>
+			<div class="small-6 columns">
+				<button class="button round" id="new"">New color scheme</button>
 			</div>
 		</div>
 		<div class="row" id="preview">
